config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    application: fission-router
  name: fission-router
spec:
  ingressClassName: contour
  rules:
    - host: fission.shortrib.app
    http:
      paths:
      - backend:
          service:
            name: router
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - fission.shortrib.dev
    secretName: router-cert
